add about sections

--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -3,8 +3,8 @@ $transition-slow: 0.8s;
 
 $container-padding: 20px;
 
-$screen-desktop: 1536px;
-$screen-laptop: 1280px;
+$screen-desktop: 1296px;
+$screen-laptop: 1260px;
 $screen-tablet-2x: 1024px;
 $screen-tablet: 768px;
 
@@ -15,6 +15,7 @@ $box-shadow-two: #4B6AA626;
 $box-shadow-three: #14448B0D;
 
 $bg-blue: #F4F6FA;
+$bg-blue-100: #F4F6FA;
 
 $white: #ffffff;
 $black: #000000;
