--- a/src/assets/styles/mixins/house-card.scss
+++ b/src/assets/styles/mixins/house-card.scss
@@ -91,6 +91,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    overflow: hidden;
     &:active {
       color: $orange-500;
     }
