--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -75,6 +75,7 @@ html(lang="ru")
     include ../mixins/resort-card
     include ../mixins/house-card
     include ../mixins/button-transparent
+    include ../mixins/about-types-card
 
     include ../components/header
 
