add hover + minor fix main page

--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -43,6 +43,7 @@ $gray-400: #A1ABB9;
 $green-400: #23C1A1;
 $green-500: #21A038;
 
+$orange-300: #EF8807;
 $orange-400: #FDAE38;
 $orange-500: #FE9410;
 
