--- a/src/views/components/about/about-types.pug
+++ b/src/views/components/about/about-types.pug
@@ -1,7 +1,7 @@
 section.about-types
   .wrapper
     .about-types__wrapper
-      h2.about-types__title Работаем по 8 направлениям в 70+ регионах РФ и странах СНГ
+      h2.about-types__title Работаем по 8 направлениям в 70+ регионах РФ <br> и странах СНГ
       .about-types__cards
         +about-types-card(
           {
