--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -76,6 +76,7 @@ html(lang="ru")
     include ../mixins/house-card
     include ../mixins/button-transparent
     include ../mixins/about-types-card
+    include ../mixins/about-team-card
 
     include ../components/header
 
