--- a/src/assets/styles/mixins/about-types-card.scss
+++ b/src/assets/styles/mixins/about-types-card.scss
@@ -1,12 +1,26 @@
 .about-types-card {
-  padding: 40px;
   background-color: $white;
   position: relative;
   border-radius: 10px;
+  overflow: hidden;
+  @include max-screen(tablet) {
+    padding: 24px;
+  }
+  @include min-screen(tablet-2x) {
+    padding: 40px;
+  }
   &:before {
     position: absolute;
     right: 0;
     top: 0;
+    @include max-screen(tablet) {
+      transform: scale(0.6);
+      transform-origin: top right;
+    }
+    @include mm-screen(tablet-2x) {
+      transform: scale(0.8);
+      transform-origin: top right;
+    }
   }
   &--green {
     &:before {
@@ -25,39 +39,86 @@
   }
 
   &__title {
-    font-size: 24px;
     font-weight: 700;
-    line-height: 24px;
     color: $black-400;
+    @include max-screen(mobile) {
+      max-width: 200px;
+      font-size: 20px;
+      line-height: 20px;
+    }
+    @include min-screen(tablet) {
+      font-size: 24px;
+      line-height: 24px;
+    }
+    @include mm-screen(tablet-2x) {
+      max-width: 300px;
+    }
   }
 
   &__text {
-    margin-top: 24px;
-    font-size: 16px;
     font-weight: 400;
-    line-height: 20px;
     color: $black-300;
+    @include max-screen(mobile) {
+      margin-top: 20px;
+      max-width: 216px;
+      font-size: 14px;
+      line-height: 16px;
+    }
+    @include min-screen(tablet) {
+      font-size: 16px;
+      line-height: 20px;
+      margin-top: 24px;
+      max-width: 590px;
+    }
   }
 
   &__link {
     display: inline-block;
-    margin-top: 40px;
-    font-size: 18px;
     font-weight: 600;
     line-height: 18px;
     color: $blue-500;
+    &:active {
+      color: $orange-500;
+    }
+    @include max-screen(tablet) {
+      margin-top: 24px;
+      font-size: 16px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 40px;
+      font-size: 18px;
+    }
+    @include min-screen(laptop) {
+      transition: color $transition-default;
+      &:hover {
+        color: $orange-500;
+      }
+    }
   }
 
   &__content {
-    max-width: 440px;
+    @include min-screen(tablet-2x) {
+      max-width: 440px;
+    }
   }
 
   &__icon {
     position: absolute;
-    right: 14px;
-    top: 14px;
+    @include max-screen(tablet) {
+      right: 10px;
+      top: 10px;
+    }
+    @include min-screen(tablet-2x) {
+      right: 14px;
+      top: 14px;
+    }
     svg {
       stroke: transparent;
+      @include max-screen(tablet) {
+        width: 70px;
+        height: 70px;
+      }
     }
+
   }
 }
