--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -15,3 +15,4 @@ block content
   main
     include ../components/about/about-video
     include ../components/about/about-types
+    include ../components/about/about-team
