update about page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -36,3 +36,4 @@
 @import "./components/about/about-video";
 @import "./components/about/about-types";
 @import "./components/about/about-team";
+@import "./components/about/about-history";
