--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -16,3 +16,4 @@ block content
     include ../components/about/about-video
     include ../components/about/about-types
     include ../components/about/about-team
+    include ../components/about/about-history
