add media block about page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -37,3 +37,4 @@
 @import "./components/about/about-types";
 @import "./components/about/about-team";
 @import "./components/about/about-history";
+@import "./components/about/about-media";
