--- a/src/assets/styles/components/main/main-houses.scss
+++ b/src/assets/styles/components/main/main-houses.scss
@@ -82,7 +82,7 @@
         display: none;
       }
       &-drag {
-        background-color: #2768C926;
+        background-color: $blue-border-light;
       }
     }
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
