--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -17,3 +17,4 @@ block content
     include ../components/about/about-types
     include ../components/about/about-team
     include ../components/about/about-history
+    include ../components/about/about-media
