add about-gratitude section

--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -18,3 +18,4 @@ block content
     include ../components/about/about-team
     include ../components/about/about-history
     include ../components/about/about-media
+    include ../components/about/about-gratitude
