--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -38,3 +38,4 @@
 @import "./components/about/about-team";
 @import "./components/about/about-history";
 @import "./components/about/about-media";
+@import "./components/about/about-gratitude";
