--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -16,6 +16,8 @@ $box-shadow-three: #14448B0D;
 
 $bg-blue: #F4F6FA;
 $bg-blue-100: #F4F6FA;
+$bg-blue-200: #EEF3FB;
+
 
 $white: #ffffff;
 $white-100: #F2F4F8;
