--- a/src/assets/styles/components/main/main-procedures.scss
+++ b/src/assets/styles/components/main/main-procedures.scss
@@ -1,20 +1,10 @@
 .main-procedures {
-  position: relative;
-  padding-top: 30px;
-  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(39, 104, 201, 0.07) 100%);
+  @include max-screen(tablet) {
+    position: relative;
+    padding-top: 30px;
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(39, 104, 201, 0.07) 100%);
+  }
   @include min-screen(tablet-2x) {
-    padding-top: 45px;
-    padding-bottom: 45px;
-    background-color: $bg-blue;
-    background-image: none;
-  }
-  @include min-screen(laptop) {
-    padding-top: 45px;
-    padding-bottom: 45px;
-    background-color: $bg-blue;
-    background-image: none;
-  }
-  @include min-screen(desktop) {
     padding-top: 45px;
     padding-bottom: 45px;
     background-color: $bg-blue;
@@ -32,29 +22,15 @@
       @include min-screen(tablet-2x) {
         display: none;
       }
-      @include min-screen(laptop) {
-        display: none;
-      }
-      @include min-screen(desktop) {
-        display: none;
-      }
     }
     &--laptop {
-      display: none;
-      gap: 24px;
+      @include max-screen(tablet) {
+        display: none;
+      }
       @include min-screen(tablet-2x) {
         display: grid;
         margin-top: 40px;
-        grid-template-columns: 1fr 416px;
-      }
-      @include min-screen(laptop) {
-        display: grid;
-        margin-top: 40px;
-        grid-template-columns: 1fr 416px;
-      }
-      @include min-screen(desktop) {
-        display: grid;
-        margin-top: 40px;
+        gap: 24px;
         grid-template-columns: 1fr 416px;
       }
     }
@@ -113,16 +89,15 @@
     max-width: 390px;
     width: 100%;
     height: 100%;
-    display: none;
     img {
       width: 100%;
       height: 100%;
       object-fit: contain;
     }
-    @include min-screen(laptop) {
-      display: block;
+    @include max-screen(tablet-2x) {
+      display: none;
     }
-    @include min-screen(desktop) {
+    @include min-screen(laptop) {
       display: block;
     }
   }
@@ -158,15 +133,9 @@
         color: $orange-500;
       }
     }
-    @include min-screen(desktop) {
-      &:hover {
-        color: $orange-500;
-      }
-    }
   }
 
   &__buttons {
-    margin-top: 30px;
     padding: 20px;
     background-color: $white;
     border-radius: 20px;
@@ -178,19 +147,10 @@
     transform: translateY(50%) translateX(-50%);
     left: 50%;
     width: 100%;
+    @include max-screen(mobile) {
+      margin-top: 30px;
+    }
     @include min-screen(tablet) {
-      max-width: 319px;
-      margin: 30px auto 0;
-    }
-    @include min-screen(tablet-2x) {
-      max-width: 319px;
-      margin: 30px auto 0;
-    }
-    @include min-screen(laptop) {
-      max-width: 319px;
-      margin: 30px auto 0;
-    }
-    @include min-screen(desktop) {
       max-width: 319px;
       margin: 30px auto 0;
     }
@@ -226,17 +186,6 @@
       width: max-content;
     }
     @include min-screen(laptop) {
-      margin-top: 66px;
-      width: max-content;
-      &:hover {
-        span {
-          color: $orange-500;
-        }
-      }
-    }
-    @include min-screen(desktop) {
-      margin-top: 66px;
-      width: max-content;
       &:hover {
         span {
           color: $orange-500;
