--- a/src/assets/styles/components/main/main-resorts.scss
+++ b/src/assets/styles/components/main/main-resorts.scss
@@ -1,18 +1,10 @@
 .main-resorts {
-  padding-top: 30px;
-  padding-bottom: 30px;
   overflow: hidden;
+  @include max-screen(tablet) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
   @include min-screen(tablet-2x) {
-    padding-top: 45px;
-    padding-bottom: 45px;
-    background-color: $bg-blue;
-  }
-  @include min-screen(laptop) {
-    padding-top: 45px;
-    padding-bottom: 45px;
-    background-color: $bg-blue;
-  }
-  @include min-screen(desktop) {
     padding-top: 45px;
     padding-bottom: 45px;
     background-color: $bg-blue;
@@ -21,42 +13,26 @@
   &__cards {
     margin-top: 30px;
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 5px;
     justify-items: center;
+    @include max-screen(tablet) {
+      grid-template-columns: 1fr;
+      gap: 5px;
+    }
     @include min-screen(tablet-2x) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 24px;
-    }
-    @include min-screen(laptop) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 24px;
-    }
-    @include min-screen(desktop) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
       gap: 24px;
     }
   }
 
   &__items {
-    margin-top: 5px;
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-template-rows: repeat(2, minmax(0, 1fr));
-    gap: 5px;
+    @include max-screen(tablet) {
+      margin-top: 5px;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      grid-template-rows: repeat(2, minmax(0, 1fr));
+      gap: 5px;
+    }
     @include min-screen(tablet-2x) {
-      margin-top: 24px;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-      grid-template-rows: repeat(1, minmax(0, 1fr));
-      gap: 24px;
-    }
-    @include min-screen(laptop) {
-      margin-top: 24px;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-      grid-template-rows: repeat(1, minmax(0, 1fr));
-      gap: 24px;
-    }
-    @include min-screen(desktop) {
       margin-top: 24px;
       grid-template-columns: repeat(4, minmax(0, 1fr));
       grid-template-rows: repeat(1, minmax(0, 1fr));
@@ -66,50 +42,31 @@
 
   &__buttons {
     margin-top: 20px;
-    display: flex;
-    justify-content: center;
+    @include max-screen(tablet) {
+      display: flex;
+      justify-content: center;
+    }
     @include min-screen(tablet-2x) {
       display: none;
     }
-    @include min-screen(laptop) {
-      display: none;
-    }
-    @include min-screen(desktop) {
-      display: none;
-    }
     a {
-      width: 100%;
+      @include max-screen(mobile) {
+        width: 100%;
+      }
       @include min-screen(tablet) {
-        width: max-content;
-      }
-      @include min-screen(tablet-2x) {
-        width: max-content;
-      }
-      @include min-screen(laptop) {
-        width: max-content;
-      }
-      @include min-screen(desktop) {
         width: max-content;
       }
     }
   }
 
   &__list {
-    display: none;
     margin-top: 50px;
     max-height: 246px;
     padding-left: 10px;
+    @include max-screen(tablet) {
+      display: none;
+    }
     @include min-screen(tablet-2x) {
-      display: flex;
-      row-gap: 20px;
-      flex-wrap: wrap;
-    }
-    @include min-screen(laptop) {
-      display: flex;
-      row-gap: 20px;
-      flex-wrap: wrap;
-    }
-    @include min-screen(desktop) {
       display: flex;
       row-gap: 20px;
       flex-wrap: wrap;
@@ -131,14 +88,6 @@
         }
       }
       @include min-screen(laptop) {
-        &:hover {
-          color: $orange-500;
-          &:before {
-            background-color: $orange-500;
-          }
-        }
-      }
-      @include min-screen(desktop) {
         &:hover {
           color: $orange-500;
           &:before {
