--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -39,3 +39,6 @@
 @import "./components/about/about-history";
 @import "./components/about/about-media";
 @import "./components/about/about-gratitude";
+@import "./components/about/about-partners";
+@import "./components/about/about-map";
+
