--- a/src/views/components/about/about-gratitude.pug
+++ b/src/views/components/about/about-gratitude.pug
@@ -33,13 +33,15 @@
               p.about-gratitude__name Диплом от санатория Северное Сияние
           .swiper-slide
             .about-gratitude__card
-              .about-gratitude__img
-                img(src="/assets/images/about-gratitude/1.png" alt="diplom-kripton" loading="lazy")
+              .swiper-zoom-container
+                .about-gratitude__img
+                  img(src="/assets/images/about-gratitude/1.png" alt="diplom-kripton" loading="lazy")
               p.about-gratitude__name Диплом от туроператора Криптон
           .swiper-slide
             .about-gratitude__card
-              .about-gratitude__img
-                img(src="/assets/images/about-gratitude/2.png" alt="diplom-alean" loading="lazy")
+              .swiper-zoom-container
+                .about-gratitude__img
+                  img(src="/assets/images/about-gratitude/2.png" alt="diplom-alean" loading="lazy")
               p.about-gratitude__name Диплом от туроператора Алеан
         .swiper-scrollbar
         
