--- a/src/views/components/icons.pug
+++ b/src/views/components/icons.pug
@@ -170,6 +170,13 @@ svg(style="display: none")
     <circle cx="7" cy="7" r="7" stroke="transparent" fill="white"/>
     <circle cx="7" cy="7" r="5.5" stroke-width="3"/>
 
+  symbol#svg-pin
+    <g opacity="0.5">
+      <path d="M20.0003 21.6668C22.7617 21.6668 25.0003 19.4283 25.0003 16.6668C25.0003 13.9054 22.7617 11.6668 20.0003 11.6668C17.2389 11.6668 15.0003 13.9054 15.0003 16.6668C15.0003 19.4283 17.2389 21.6668 20.0003 21.6668Z" stroke="#A1ABB9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M20.0003 36.6668C26.667 30.0002 33.3337 24.0306 33.3337 16.6668C33.3337 9.30303 27.3641 3.3335 20.0003 3.3335C12.6365 3.3335 6.66699 9.30303 6.66699 16.6668C6.66699 24.0306 13.3337 30.0002 20.0003 36.6668Z" stroke="#A1ABB9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+    </g>
+
+
 
 
 
