--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -18,4 +18,6 @@ block content
     include ../components/about/about-team
     include ../components/about/about-history
     include ../components/about/about-media
+    include ../components/about/about-map
     include ../components/about/about-gratitude
+    include ../components/about/about-partners
