--- a/src/assets/styles/mixins/house-card.scss
+++ b/src/assets/styles/mixins/house-card.scss
@@ -3,10 +3,6 @@
   overflow: hidden;
   box-shadow: 0px 5px 20px 0px #26314108, 0px 1px 3px 1px #26314112;
   position: relative;
-  min-height: 456px;
-  @include min-screen(tablet-2x) {
-    min-height: 470px;
-  }
 
   &__content {
     display: flex;
@@ -16,8 +12,10 @@
   }
 
   &__bg {
-    height: 200px;
     width: 100%;
+    @include max-screen(tablet) {
+      height: 200px;
+    }
     @include min-screen(tablet-2x) {
       height: 240px;
     }
@@ -54,8 +52,10 @@
   &__container {
     background-color: $white;
     padding: 16px;
-    min-height: 256px;
-    height: 256px;
+    @include max-screen(tablet) {
+      min-height: 256px;
+      height: 256px;
+    }
     @include min-screen(tablet-2x) {
       min-height: 230px;
       height: 230px;
