--- a/src/views/components/about/about-map.pug
+++ b/src/views/components/about/about-map.pug
@@ -7,33 +7,91 @@
           svg(width="40" height="40" viewBox="0 0 40 40")
             use(xlink:href="#svg-pin")
           span 250+
-      ul.about-map__list
-        li.about-map__city Москва
-        li.about-map__city Санкт-Петербург
-        li.about-map__city Новосибирск
-        li.about-map__city Екатеринбург
-        li.about-map__city Казань
-        li.about-map__city Нижний Новгород
-        li.about-map__city Челябинск
-        li.about-map__city Красноярск
-        li.about-map__city Самара
-        li.about-map__city Уфа
-        li.about-map__city Томск
-        li.about-map__city Владивосток
-        li.about-map__city Ростов-на-Дону
-        li.about-map__city Омск
-        li.about-map__city Краснодар
-        li.about-map__city Воронеж
-        li.about-map__city Пермь
-        li.about-map__city Волгоград
-        li.about-map__city Саратов
-        li.about-map__city Тюмень
-        li.about-map__city Тольятти 
-        li.about-map__city Барнаул
-        li.about-map__city Ижевск
-        li.about-map__city Иркутск
-        li.about-map__city Якутск
-        li.about-map__city Хабаровск
+      
+      form.about-map__form(action="")
+        button.about-map__button(type="button")
+          span Быстрый выбор города
+          svg(width="16" height="16" viewBox="0 0 16 16")
+            use(xlink:href="#svg-chevron-down")
+        .about-map__cities
+          label
+            input(type="checkbox")
+            span Москва
+          label
+            input(type="checkbox") 
+            span Санкт-Петербург
+          label
+            input(type="checkbox") 
+            span Новосибирск
+          label
+            input(type="checkbox") 
+            span Екатеринбург
+          label
+            input(type="checkbox") 
+            span Казань
+          label
+            input(type="checkbox") 
+            span Нижний Новгород
+          label
+            input(type="checkbox") 
+            span Челябинск
+          label
+            input(type="checkbox") 
+            span Красноярск
+          label
+            input(type="checkbox") 
+            span Самара
+          label
+            input(type="checkbox") 
+            span Уфа
+          label
+            input(type="checkbox") 
+            span Томск
+          label
+            input(type="checkbox") 
+            span Владивосток
+          label
+            input(type="checkbox") 
+            span Ростов-на-Дону
+          label
+            input(type="checkbox") 
+            span Омск
+          label
+            input(type="checkbox") 
+            span Краснодар
+          label
+            input(type="checkbox") 
+            span Воронеж
+          label
+            input(type="checkbox") 
+            span Пермь
+          label
+            input(type="checkbox") 
+            span Волгоград
+          label
+            input(type="checkbox") 
+            span Саратов
+          label
+            input(type="checkbox") 
+            span Тюмень
+          label
+            input(type="checkbox") 
+            span Тольятти
+          label
+            input(type="checkbox") 
+            span Барнаул
+          label
+            input(type="checkbox") 
+            span Ижевск
+          label
+            input(type="checkbox") 
+            span Иркутск
+          label
+            input(type="checkbox") 
+            span Якутск
+          label
+            input(type="checkbox") 
+            span Хабаровск
 
 
 
