--- a/src/assets/styles/components/about/about-map.scss
+++ b/src/assets/styles/components/about/about-map.scss
@@ -39,25 +39,115 @@
     }
   }
 
-  &__list {
+  &__form {
     margin-top: 40px;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 16px;
+    position: relative;
+    
   }
 
-  &__city {
-    font-size: 16px;
-    line-height: 18px;
-    color: $black-300;
-    border-bottom: 1px dashed rgba($color: $black-300, $alpha: 0.35);
+  &__button {
+    width: 100%;
+    padding: 10px 12px;
+    border-radius: 4px;
+    border: 1px solid rgba($color: $blue-700, $alpha: 0.12);
+    background-color: rgba($color: $blue-700, $alpha: 0.04);
+    @include max-screen(tablet) {
+      display: flex;
+      justify-content: space-between;
+    }
     @include min-screen(tablet-2x) {
-      cursor: pointer;
+      display: none;
+    }
+    span {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 18px;
+      color: $gray-400;
+      transition: color $transition-default;
+    }
+    svg {
+      stroke: $gray-400;
+      fill: transparent;
+      transition: stroke $transition-default, transform $transition-default;
+    }
+    &.active {
+      span {
+        color: $black-400;
+      }
+      svg {
+        transform: rotate(180deg);
+        stroke: $black-300;
+      }
+    }
+  }
+
+  &__cities {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 16px;
+
+    transition: opacity $transition-default, z-index $transition-default, visibility $transition-default;
+
+    @include max-screen(tablet) {
+      position: absolute;
+      top: 44px;
+      width: 100%;
+      left: 0;
+      right: 0;
+
+      column-gap: 16px;
+
+      background-color: $white;
+      border-radius: 5px;
+      padding: 20px;
+      box-shadow: 0px 5px 15px 0px rgba($color: $black, $alpha: 0.1), 0px 1px 2px 0px rgba($color: $black, $alpha: 0.1);
+
+      opacity: 0;
+      visibility: hidden;
+      z-index: -1;
+    }
+    @include min-screen(tablet-2x) {
+      position: relative;
+      column-gap: 30px;
+
+      opacity: 1;
+      visibility: visible;
+      z-index: 5;
+    }
+
+    &.active {
+      opacity: 1;
+      visibility: visible;
+      z-index: 5;
+    }
+    label {
+      position: relative;
+    }
+    input {
+      opacity: 0;
+      visibility: hidden;
+      position: absolute;
+      &:checked + span {
+        color: $orange-500;
+        border-bottom: transparent;
+      }
+    }
+    span {
+      font-size: 16px;
+      line-height: 18px;
+      color: $black-300;
+      border-bottom: 1px dashed rgba($color: $black-300, $alpha: 0.35);
       transition: color $transition-default, border-color $transition-default;
-      &:hover {
+      &:active {
         color: $orange-500;
         border-color: transparent;
+      }
+      @include min-screen(laptop) {
+        cursor: pointer;
+        &:hover {
+          color: $orange-500;
+          border-color: transparent;
+        }
       }
     }
   }
