--- a/src/views/components/icons.pug
+++ b/src/views/components/icons.pug
@@ -176,6 +176,11 @@ svg(style="display: none")
       <path d="M20.0003 36.6668C26.667 30.0002 33.3337 24.0306 33.3337 16.6668C33.3337 9.30303 27.3641 3.3335 20.0003 3.3335C12.6365 3.3335 6.66699 9.30303 6.66699 16.6668C6.66699 24.0306 13.3337 30.0002 20.0003 36.6668Z" stroke="#A1ABB9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
     </g>
 
+  symbol#svg-chevron-down
+    <path d="M4 6L8 10L12 6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+
+
+
 
 
 
