--- a/src/assets/styles/components/about/about-partners.scss
+++ b/src/assets/styles/components/about/about-partners.scss
@@ -157,11 +157,15 @@
       &-prev {
         left: 0;
         svg {
+          margin-right: 2px;
           transform: rotate(180deg);
         }
       }
       &-next {
         right: 0;
+        svg {
+          margin-left: 2px;
+        }
       }
     }
   }
