--- a/src/assets/styles/components/about/about-history.scss
+++ b/src/assets/styles/components/about/about-history.scss
@@ -323,11 +323,15 @@
       &-prev {
         left: 0;
         svg {
+          margin-right: 2px;
           transform: rotate(180deg);
         }
       }
       &-next {
         right: 0;
+        svg {
+          margin-left: 2px;
+        }
       }
       &-disabled {
         background-color: rgba($color: $white, $alpha: 0.1);
