--- a/src/views/components/about/about-gratitude.pug
+++ b/src/views/components/about/about-gratitude.pug
@@ -12,36 +12,46 @@
             svg(width="10" height="16" viewBox="0 0 10 16")
               use(xlink:href="#svg-arrow-right")
       .swiper.about-gratitude__slider
-        .swiper-wrapper
-          .swiper-slide
+        .swiper-wrapper.gallery
+          .swiper-slide(data-src="/assets/images/about-gratitude/1.png")
             .about-gratitude__card
-              .swiper-zoom-container
-                .about-gratitude__img
-                  img(src="/assets/images/about-gratitude/1.png" alt="diplom-kripton" loading="lazy")
+              .about-gratitude__img
+                .about-gratitude__icon
+                  svg(width="18" height="18" viewBox="0 0 18 18")
+                    use(xlink:href="#svg-arrows-size")
+                img(src="/assets/images/about-gratitude/1.png" alt="Диплом от туроператора Криптон" loading="lazy")
               p.about-gratitude__name Диплом от туроператора Криптон
-          .swiper-slide
+          .swiper-slide(data-src="/assets/images/about-gratitude/2.png")
             .about-gratitude__card
-              .swiper-zoom-container
-                .about-gratitude__img
-                  img(src="/assets/images/about-gratitude/2.png" alt="diplom-alean" loading="lazy")
+              .about-gratitude__img
+                .about-gratitude__icon
+                  svg(width="18" height="18" viewBox="0 0 18 18")
+                    use(xlink:href="#svg-arrows-size")
+                img(src="/assets/images/about-gratitude/2.png" alt="Диплом от туроператора Алеан" loading="lazy")
               p.about-gratitude__name Диплом от туроператора Алеан
-          .swiper-slide
+          .swiper-slide(data-src="/assets/images/about-gratitude/3.png")
             .about-gratitude__card
-              .swiper-zoom-container
-                .about-gratitude__img
-                  img(src="/assets/images/about-gratitude/1.png" alt="diplom-alean" loading="lazy")
+              .about-gratitude__img
+                .about-gratitude__icon
+                  svg(width="18" height="18" viewBox="0 0 18 18")
+                    use(xlink:href="#svg-arrows-size")
+                img(src="/assets/images/about-gratitude/3.png" alt="Диплом от санатория Северное Сияние" loading="lazy")
               p.about-gratitude__name Диплом от санатория Северное Сияние
-          .swiper-slide
+          .swiper-slide(data-src="/assets/images/about-gratitude/3.png")
             .about-gratitude__card
-              .swiper-zoom-container
-                .about-gratitude__img
-                  img(src="/assets/images/about-gratitude/1.png" alt="diplom-kripton" loading="lazy")
+              .about-gratitude__img
+                .about-gratitude__icon
+                  svg(width="18" height="18" viewBox="0 0 18 18")
+                    use(xlink:href="#svg-arrows-size")
+                img(src="/assets/images/about-gratitude/1.png" alt="Диплом от туроператора Криптон" loading="lazy")
               p.about-gratitude__name Диплом от туроператора Криптон
-          .swiper-slide
+          .swiper-slide(data-src="/assets/images/about-gratitude/2.png")
             .about-gratitude__card
-              .swiper-zoom-container
-                .about-gratitude__img
-                  img(src="/assets/images/about-gratitude/2.png" alt="diplom-alean" loading="lazy")
+              .about-gratitude__img
+                .about-gratitude__icon
+                  svg(width="18" height="18" viewBox="0 0 18 18")
+                    use(xlink:href="#svg-arrows-size")
+                img(src="/assets/images/about-gratitude/2.png" alt="Диплом от туроператора Алеан" loading="lazy")
               p.about-gratitude__name Диплом от туроператора Алеан
         .swiper-scrollbar
         
